fix page width on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,7 @@
 .page {
   min-height: 100vh;
   width: 100%;
-  min-width: 500px;
+  min-width: fit-content;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
